adding some endpoints to swagger
